# book-of-monads

./: README.md  book-of-monads.cabal  flake.nix
src/: LiftingUnlifting.hs  Main.hs
src/TicTacToe/: Final.hs  Initial.hs
